--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,11 @@
         "\n",
         "The goal is to better understand how embedding models work, especially for retreival use cases in RAG systems.\n",
         "\n",
-        "We run the code using the T4 GPU on Google Colab in order to expedite embedding latency."
+        "We run the code using the T4 GPU on Google Colab in order to expedite embedding latency.\n",
+        "\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/choonghwanlee/visualize-embeddings-aipi590-fall24/blob/main/main.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
       ]
     },
     {
