add captions, done

--- a/main.ipynb
+++ b/main.ipynb
@@ -108,7 +108,9 @@
         "id": "4Mu-l5NbLTel"
       },
       "source": [
-        "### Fetch & Embed Data"
+        "### Fetch & Embed Data\n",
+        "\n",
+        "We use the SentenceTransformers library to load our embedding model from HuggingFace and encode our text"
       ]
     },
     {
@@ -529,6 +531,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Above is a visualization of Stella embeddings using PCA to reduce the dimensionality to 2D. We note a 'V'-like pattern in the emebdding space. We note that text within one topic are relatively far away from each other, and that there is a lot of overlap between topics. This suggests PCA may not be a suitable method of visualizing & explaining Stella embeddings of the 20 News Group dataset."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 24,
       "metadata": {
@@ -567,6 +576,13 @@
       "source": [
         "# Plot t-SNE result\n",
         "plot_2d_embedding(embeddings_tsne, \"t-SNE 2D Embeddings of 20 Newsgroups\", labels)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Above is a visualization of Stella embeddings using tSNE to reduce the dimensionality to 2D. The embeddings are generally scattered apart with no clearly distinct clusters formed. However, we note that text within one topic is relatively closer to one another compared to PCA, with less overlap between topics. This suggests tSNE is a better method of visualizing & explaining Stella embeddings of the 20 News Group dataset."
       ]
     },
     {
@@ -625,11 +641,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Above is a visualization of Stella embeddings using UMAP to reduce the dimensionality to 2D. Like tSNE, the embeddings are generally scattered apart with no clearly distinct clusters formed. In addition, text from one topic are definitely much closer to one another with minimal overlap with other classes. This suggests UMAP may be the most ideal method of visualizing & explaining Stella embeddings of the 20 News Group dataset."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "g0doHC-YY9X4"
       },
       "source": [
-        "### Interpretation of Visualizations\n",
+        "### Interpretation/Explanation of Visualizations\n",
         "\n",
         "Above we generated visualizations of the 20 News Group dataset using tSNE, PCA, and UMAP.\n",
         "\n",
